--- a/Tela_login.html
+++ b/Tela_login.html
@@ -11,7 +11,7 @@
 <div class="Login-page">
     
 <div class="Card">
-    <img src="logo 2.png" alt="logo"  class="logo">
+    <img src="Img/logo 2.png" alt="logo"  class="logo">
     <div>
      <div class="campo">
       <label for="usuario">Nome</label>
