--- a/Tela_login.html
+++ b/Tela_login.html
@@ -24,13 +24,13 @@
       <input type="password" id="senha" placeholder="Digite sua senha"> 
     </div>
 <div>
-<a href="tela_principal.html" class="botao">ENTRAR</a>
+<a href="tela_principal.html" class="botao" type="button" onclick="validarFormulario()">ENTRAR</a>
 </div>
 
 <br>
 <button class="google-btn">
   <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
-  Entrar com Google
+  Entrar com Google 
 </button>
 
 <p class="cadastro">
@@ -39,14 +39,12 @@
 </p>
 
 
-
-
 </div>
 
 </div>
 
 </div>
-
+<script src="script.js"></script>
 </body>
 
 
