--- a/tela_principal.html
+++ b/tela_principal.html
@@ -43,7 +43,7 @@
       <a href="">Beleza</a>
       </div>
         <div class="categoria">
-      <a href="">Relógios</a>
+      <a href="">Eletronicos</a>
       </div>
         <div class="categoria">
       <a href="">Esporte</a>
@@ -69,7 +69,6 @@
       <div class="interface">
         <div class="slider-container">
           <div class="slider-box ativo">
-
             <img src="Img/slider_feira.png">
           </div>
           <div class="slider-box">
