--- a/tela_principal.html
+++ b/tela_principal.html
@@ -49,16 +49,16 @@
       <a href="">Esporte</a>
       </div>
         <div class="categoria">
-      <a href="">Fone</a>
+      <a href="">Artefatos</a>
       </div>
         <div class="categoria">
       <a href="">Livraria</a>
       </div>
         <div class="categoria">
-      <a href="">Outros</a>
+      <a href="">Decoração</a>
       </div> 
        <div class="categoria">
-      <a href="">Outros</a>
+      <a href="">Infantil</a>
       </div> 
        <div class="categoria">
       <a href="">Outros</a>
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="botoes">
-          <a href="#" class="btn-inscrever">Inscreva-se</a>
+          <a href="Tela inscrição.html" class="btn-inscrever">Inscreva-se</a>
         </div>
         <div class="btn-nav-box">
            <div class="btn-nav ativo"></div>
