--- a/Tela inscrição.html
+++ b/Tela inscrição.html
@@ -9,10 +9,9 @@
 </head>
 <body>  
 <div class="Login-page">
-    
 <div class="Card">
-<h2>Inscrição</h2>    
-<div>
+    <img src="Img/img_feira.png" alt="logo"  class="logo">
+    <div>
      <div class="campo">
       <label for="usuario">Nome</label>
       <input type="text" id="usuario" placeholder="Digite seu nome">
