--- a/TELA_CHAT2.HTML
+++ b/TELA_CHAT2.HTML
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+  <div class="kkk">
   <div class="chat-container">
     
     <div class="chat-header">
@@ -27,5 +28,6 @@
       <button class="send">➤</button>
     </div>
   </div>
+</div>
 </body>
 </html>
