--- a/tela_principal.html
+++ b/tela_principal.html
@@ -112,7 +112,7 @@
         <div class="gallery-container">
             
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM03.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -123,7 +123,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM1.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -134,7 +134,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM2.webp" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -145,7 +145,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM33.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -156,7 +156,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM44.webp" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -167,7 +167,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM5.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -178,7 +178,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IAMGEM02.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -189,7 +189,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM88.jpg"">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -200,7 +200,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM8.jpg">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -211,7 +211,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM99.jpg">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -222,7 +222,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM77.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
@@ -233,7 +233,7 @@
                 </div>
             </a>
             <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
+                <img src="Img/IMAGEM01.jpg" alt="">
                 <div>
                   <br>
                <h3>teste</h3>
