--- a/tela_principal.html
+++ b/tela_principal.html
@@ -22,19 +22,19 @@
           <div class="menu2">
               <input type="text" name="buscar" placeholder="Buscar..." >
           </div>
-          <div class="menu2">
+          <div class="">
             <a href=""> Início   <i class="ri-home-line"></i></a>
           </div>
-          <div class="menu2">
+          <div class="">
             <a href=""> Perfil   <i class="ri-user-line"></i></a>
           </div>
-          <div class="menu2">
+          <div class="">
             <a href="">Notificações  <i class="ri-notification-line"></i></a>
           </div>
-          <div class="menu2">
+          <div class="">
             <a href="">Chat  <i class="ri-chat-3-line"></i></a>
           </div>
-          <div class="menu2">
+          <div class="">
             <a href="">Anunciar produto  <i class="ri-add-line"></i></a>
           </div>        
         </div>
