--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -41,13 +41,43 @@
       </div>
     </header>
 
-    <div class="all">
+  <div class="all">
 
-    <div class="logoperfil">  
+    <div class="logoperfil"></div>
+
+     <div class="perfil-container">
+
+      <div class="perfil-esquerda">
+        <div class="fotoperfil"></div>
+
+        <div class="info">
+          <h2>Nome</h2>
+          <i class="ri-money-dollar-circle-line"></i><a>00,0</a>
+
+        </div>
+      </div>
+      <div class="perfil-direita">
+        <div class="seguidores">
+          109 seguidores &nbsp;&nbsp; 109 seguindo
+        </div>
+        <button class="editar">
+          <a>Editar</a>
+        </button>
+      </div>
+
     </div>
-    <div class="fotoperfil">
+
+    <br><br><br><br> <br><br>
+    <div class="ajuste4">
+
+    <div class="itensperfil">
+      
     </div>
-    <div class="seguidor">
-    </div>
-    </div>
-    </html>
+    <div class="itensperfil"></div>
+  </div>
+  </div>
+
+
+</body>
+
+</html>
