--- a/Tela_login.html
+++ b/Tela_login.html
@@ -10,15 +10,20 @@
 </head>
 
 <body>
-  <div class="Login-page">
-    <form class="form" id="form" action="tela_principal.html" onsubmit="return validarFormulario()">
 
-      <div class="Card">
-        <img src="Img/logo 2.png" alt="logo"  class="logo">
-      <div>
+  <div class="Login-page">
+
+    
+    <div class="Card">
+      <img src="Img/logo 2.png" alt="logo"  class="logo">
+    <div>
+
+    <form class="form" id="form">
+
       <div class="campo">
         <label for="usuario">Nome</label>
         <input type="text" id="usuario" placeholder="Digite seu usuário">
+        
         <small>Error Message</small>
       </div>
 
