--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -58,7 +58,7 @@
       </div>
       <div class="perfil-direita">
         <div class="seguidores">
-          109 seguidores &nbsp;&nbsp; 109 seguindo
+          0 seguidores &nbsp;&nbsp; 0 seguindo
         </div>
         <button class="editar">
           <a>Editar</a>
@@ -67,17 +67,70 @@
 
     </div>
 
-    <br><br><br><br> <br><br>
-    <div class="ajuste4">
+    <br><br>
 
-    <div class="itensperfil">
-      
+  <section class="container-produtos">
+
+    <div class="box">
+        <h3>Produtos trocados</h3>
+
+        <div class="grid">
+            <div class="card">
+                <img src="Img/IMAGEM11.webp">
+                <p>Estojo</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM3.jpg">
+                <p>Fone</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM77.jpg">
+                <p>Lápis</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM30.jpg">
+                <p>Relógio</p>
+            </div>
+
+        </div>
     </div>
-    <div class="itensperfil"></div>
-  </div>
-  </div>
 
+    
 
+    <div class="box">
+        <h3>Produtos disponíveis</h3>
+
+         <div class="grid">
+            <div class="card">
+                <img src="Img/IMAGEM11.webp">
+                <p>Estojo</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM3.jpg">
+                <p>Fone</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM77.jpg">
+                <p>Lápis</p>
+            </div>
+
+            <div class="card">
+                <img src="Img/IMAGEM30.jpg">
+                <p>Relógio</p>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+
+</body>
+</html>
 </body>
 
 </html>
