--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -29,7 +29,7 @@
             <a href=""> Perfil   <i class="ri-user-line"></i></a>
           </div>
           <div class="menu2">
-            <a href="">Notificações  <i class="ri-notification-line"></i></a>
+            <a href="#popup">Notificações  <i class="ri-notification-line"></i></a>
           </div>
           <div class="menu2">
             <a href="">Chat  <i class="ri-chat-3-line"></i></a>
