--- a/Tela_criar_senha.html
+++ b/Tela_criar_senha.html
@@ -13,53 +13,66 @@
 <div class="Login-page">
     
 <div class="Card">
-<h2>Criar conta</h2>    
-<form action="tela_principal.html" onsubmit="return validarFormulario()">
-  <div class="campo">
+<h2>Criar conta</h2> 
+
+  <form id="form" class="form">
+
+    <div class="campo">
       <label for="usuario">Nome</label>
-        <input type="text" id="usuario" placeholder="Digite seu nome">
-      </div>
-      <div>
+      <input type="text" id="usuario" placeholder="Digite seu usuário">
+        
+    </div>
+
+    <div class="campo">
+      <label for="matricula">Número de Matrícula</label>
+      <input type="number" id="numMatricula" placeholder="Digite o número de matrícula">
+    </div>
+
+    <div class="campo">
+      <label for="numTelefone">Número de Telefone</label>
+      <input type="tel" id="numTelefone" placeholder="Digite o número de telefone">
+    </div>
+
+    <div class="campo">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Digite o seu email">
+    </div>
+
+    <div class="campo">
+      <label for="emailConfirmar"> Confirmar Email</label>
+      <input type="email" id="emailConfirmar" placeholder="Confirme seu email">
+    </div>
+
       <div class="campo">
-        <label for="matrícula">Número de Matrícula</label>
-        <input type="number" id="numMatrícula" placeholder="Digite o número de matrícula">
-      </div>
-      <div class="campo">
-        <label for="matrícula">Número de Telefone</label>
-        <input type="tel" id="numTelefone" placeholder="Digite o número de telefone">
-      </div>
-      <div class="campo">
-        <label for="matrícula">Email</label>
-        <input type="email" id="email" placeholder="Digite o seu email">
-      </div>
-      <div class="campo">
-        <label for="matrícula"> Confirmar Email</label>
-        <input type="email" id="emailConfirmar" placeholder="Confirme seu email">
-      </div>
-      <div class="campo">
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" placeholder="Digite sua senha"> 
-         <i id="versenha" class="ri-eye-line"></i>
-      </div>
-      <div class="campo">
-        <label for="senha">Confirmar senha</label>
-        <input type="password" id="confirmarSenha" placeholder="Confirme sua senha">
-         <i id="verconfirmesenha" class="ri-eye-line"></i> 
-      </div>
-      <div>
-        <button type="submit" class="botao">CRIAR CONTA</button>
-      </div>
-      </form>
-      <br>
-      <button class="google-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" placeholder="Digite sua senha">
+      <i id="versenha" class="ri-eye-line"></i>
+       <small>A senha teve conter no mínimo 8 caracteres</small>
+    </div>
+
+    <div class="campo">
+      <label for="senha">Confirmar senha</label>
+      <input type="password" id="confirmarSenha" placeholder="Confirme sua senha">
+       <i id="verconfirmesenha" class="ri-eye-line"></i> 
+    </div>
+
+    <div>
+      <button type="submit" class="botao">CRIAR CONTA</button>
+    </div>
+
+  </form>
+  <br>
+
+  <button class="google-btn">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
       Criar com o Google
-      </button>
-      <p class="cadastro">
- Ja possui cadastro?
-  <a href="Tela_login.html">Entrar</a>
-</p>
-  </div>
+  </button>
+
+  <p class="cadastro">
+    Ja possui cadastro?
+    <a href="Tela_login.html">Entrar</a>
+  </p>
+</div>
 
 </div>
 
