--- a/tela_produto.html
+++ b/tela_produto.html
@@ -133,6 +133,8 @@
       <option>Outros</option>
     </select>
 
+
+
     <select class="input-info" required>
       <option value="" disabled selected>Categoria</option>
       <option>Papelaria </option>
@@ -148,12 +150,16 @@
 
     <textarea class="input-info" placeholder="Descrição"></textarea>
 
-  </form>
+<h3>preferências de trocas</h3>
+   <div class="mensagens">
+  <button type="button" onclick="selecionar(this, 1)">Produto</button>
+  <button type="button" onclick="selecionar(this, 2)">pontos</button>
+  <button type="button" onclick="selecionar(this, 3)">Produtos / pontos</button>
 </div>
 
 
 </div>
-<script src="scriptFoto.js"></script>
+<script src="script.js"></script>
 <script src="scriptPopup.js"></script>
 </body>
 </html>
