--- a/estojo.html
+++ b/estojo.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Produto-Desapega SENAI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
      <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-      <div class="faixatopo">
+     <div class="faixatopo">
       <br>
     </div>
 
@@ -91,74 +92,7 @@
   </div>
 </header>
 
-<div class="box-produto">
-
-  <div class="photo-upload">
-    <a ><i class="ri-camera-line"></i></a>
-    </svg>
-
- 
-  </div>
-
- 
-
-  <form class="form-produto">
-
-    <label>Informações ⓘ</label>
-
-    <input type="text" class="input-info" placeholder="Produto">
-
-    <select class="input-info" required>
-      <option value="" disabled selected>Tempo de uso</option>
-      <option>1 mês</option>
-      <option>2 meses</option>
-      <option>3 meses</option>
-      <option>4 meses</option>
-      <option>5 meses</option>
-      <option>6 meses +</option>
-      <option>1 ano +</option>
-    </select>
 
 
-
-    <select class="input-info" required>
-      <option value="" disabled selected>Categoria</option>
-      <option>Papelaria </option>
-      <option>Beleza </option>
-      <option>Eletrônico </option>
-      <option>Esporte </option>
-      <option>Artefato </option>
-      <option>Livraria </option>
-      <option>Decoração </option>
-      <option>Infantil </option>
-      <option>Outros</option>
-    </select>
-
-    <textarea class="input-info" placeholder="Descrição"></textarea>
-
-<h3>preferências de trocas</h3>
-   <div class="mensagens">
-  <button type="button" onclick="selecionar(this, 1)">Produto</button>
-  <button type="button" onclick="selecionar(this, 2)">pontos</button>
-  <button type="button" onclick="selecionar(this, 3)">Produtos / pontos</button>
-</div>
-<br>
-    <select class="input-info" required>
-      <option value="" disabled selected>Produto p/ troca</option>
-      <option>Papelaria </option>
-      <option>Beleza </option>
-      <option>Eletrônico </option>
-      <option>Esporte </option>
-      <option>Artefato </option>
-      <option>Livraria </option>
-      <option>Decoração </option>
-      <option>Infantil </option>
-      <option>Outros</option>
-    </select>
-<br>
-     <button class="botao2" type="submit">Anunciar</button>
-</div>
-<script src="script.js"></script>
-<script src="scriptPopup.js"></script>
 </body>
 </html>
