--- a/estojo.html
+++ b/estojo.html
@@ -91,8 +91,81 @@
     </div>
   </div>
 </header>
+<br><br><br>
+ <div class="pagina-produto">
 
+    <div class="produto-topo-area">
 
+        <!-- IMAGEM -->
+        <div class="produto-imagem-box">
+            <img src="Img/IMAGEM03.jpg" alt="Produto" class="produto-imagem-foto">
+        </div>
 
+        <!-- CARD LATERAL -->
+        <div class="produto-card-lateral">
+
+            <h2 class="produto-titulo">Estojo Escola</h2>
+
+            <div class="produto-usuario-area">
+                <div class="produto-usuario-foto"></div>
+                <span class="produto-usuario-nome">jaqueline</span>
+                <button class="produto-botao-seguir">seguir</button>
+            </div>
+
+            <div class="produto-divisor"></div>
+
+            <button class="produto-botao-principal">Eu quero</button>
+
+            <button class="produto-botao-chat">
+                Chat <i class="ri-chat-3-line"></i>
+            </button>
+
+        </div>
+
+    </div>
+
+    <!-- PARTE DE BAIXO -->
+    <div class="produto-inferior-area">
+
+        <div class="produto-descricao-box">
+            <h3>Descrição</h3>
+            <p>
+              Estojo escolar em ótimo estado, bem conservado e com bastante espaço interno para organizar lápis, canetas, borracha e outros materiais. Possui zíper resistente e material durável, ideal para uso diário na escola ou faculdade.
+
+Produto funcional, prático e perfeito para quem busca organização no dia a dia.
+
+Não tenho interesse em trocar por pontos.
+            </p>
+        </div>
+
+        <div class="produto-info-box">
+            <h3>Informações<i class="ri-information-line"></i></h3>
+
+            <div class="produto-info-grid">
+
+                <div>
+                    <small>tempo</small>
+                    <strong>3 meses</strong>
+                </div>
+
+                <div>
+                    <small>categoria</small>
+                    <strong>objeto</strong>
+                </div>
+
+                <div>
+                    <small>trocas</small>
+                    <strong>produto</strong>
+                </div>
+
+            </div>
+
+            <div class="produto-linha-final"></div>
+
+        </div>
+
+    </div>
+
+</div>
 </body>
 </html>
