--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
      <main> 
         <div class="gallery-container">
             
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="estojo.html" class="fotos">
                 <img src="Img/IMAGEM03.jpg" alt="">
                 <div>
                   <br>
