--- a/Tela inscrição.html
+++ b/Tela inscrição.html
@@ -9,29 +9,31 @@
 </head>
 <body>  
 <div class="Login-page">
-<div class="Card">
+  <div class="Card">
     <img src="Img/img_feira.png" alt="logo"  class="logo">
-    <div>
-     <div class="campo">
-      <label for="usuario">Nome</label>
-      <input type="text" id="usuario" placeholder="Digite seu nome">
-    </div>
 
-    <div class="campo">
-    <label for="matrícula">Número de Matrícula</label>
-<input
-  type="text"
-  placeholder="Digite o número de matrícula"
-  oninput="this.value = this.value.replace(/[^0-9]/g, '')">
-<br> 
-<br>
+    <form id="formFeira" class="form">
+      <div class="campo">
+        <label for="usuario">Nome</label>
+        <input type="text" id="usuario" placeholder="Digite seu usuário">
+        <small></small>
+      </div>
 
-<div>
-<a href="tela_principal.html" class="botao">Salvar inscrição</a>
-</div>
+      <div class="campo">
+        <label for="numMatricula">Número de Matrícula</label>
+        <input  id="numMatricula" placeholder="Digite o número de matrícula"oninput="this.value = this.value.replace(/[^0-9]/g, '')">
+        <small></small>
+      </div>
+      <button type="submit" class="botao">Salvar inscrição</button>
+    </form>
+  <br> 
+  <br>
+  
+    
+  
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
 
