--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="Img/IMAGEM1.jpg" alt="">
+            <a href="capinha.html" class="fotos">
+                <img src="Img/pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
                 <div>
                   <br>
                <h3>Capa de iphone 11 pro max </h3>
@@ -184,7 +184,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="raquete.html" class="fotos">
                 <img src="Img/IMAGEM2.webp" alt="">
                 <div>
                   <br>
@@ -262,14 +262,14 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="Img/IMAGEM99.jpg">
+            <a href="garrafa.html" class="fotos">
+                <img src="Img/nova_garrafa.avif">
                 <div>
                   <br>
-               <h3>Cinto de Vaqueiro</h3>
+               <h3>Garrafa térmica</h3>
        
                 <div class="meses">
-                <h3>4 meses</h3>
+                <h3>3 meses</h3>
                 </div>
                 </div>
             </a>
