--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Principal-Desapega SENAI</title>
       <link rel="stylesheet" type="text/css" href="estilo.css">
-     
+     <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
   </head>
   <body>
     <div class="faixatopo">
@@ -193,7 +193,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="Img/IMAGEM33.jpg" alt="">
                 <div>
                   <br>
@@ -216,7 +216,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="Img/IMAGEM5.jpg" alt="">
                 <div>
                   <br>
@@ -238,8 +238,8 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
-                <img src="Img/IMAGEM88.jpg"">
+            <a href="" class="fotos">
+                <img src="Img/IMAGEM88.jpg">
                 <div>
                   <br>
                <h3>Livro da Gramática</h3>
@@ -271,7 +271,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="Img/IMAGEM77.jpg" alt="">
                 <div>
                   <br>
@@ -282,7 +282,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="Img/IMAGEM01.jpg" alt="">
                 <div>
                   <br>
@@ -293,7 +293,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
                 <div>
                   <br>
@@ -304,7 +304,7 @@
                 </div>
                 </div>
             </a>
-            <a href="img/doctor hudson.jpg" class="fotos">
+            <a href="" class="fotos">
                 <img src="pao-caseiro-para-iniciantes_02-840x560.jpg" alt="">
                 <div>
                   <br>
