--- a/capinha.html
+++ b/capinha.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
      <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
 </head>
 <body>
      <div class="faixatopo">
