--- a/capinha.html
+++ b/capinha.html
@@ -175,16 +175,14 @@
       <option>camisa vasco</option>
       <option>dicionário de inglês</option>
       <option>guarda chuva</option>
-      <option></option>
-      <option></option>
-      <option></option>
-      <option></option>
-      <option></option>
     </select>
-
     <div class="acoes">
-      <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
-      <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
+      
+  <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
+<button id="btnSelecionar" class="btn">Pontos</button>
+  <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
+
+      
     </div>
   </div>
 </div>
