--- a/raquete.html
+++ b/raquete.html
@@ -164,6 +164,35 @@ Não tenho interesse em trocar por pontos.
 
     </div>
 
+
+
+
+
+
+
+    
+</div>
+
+
+
+
+<div id="overlayTroca" class="overlay">
+  <div class="modal-troca">
+    <h2>Escolha um item para trocar</h2>
+
+    <select class="input-info" required>
+      <option value="" disabled selected>Categoria</option>
+      <option>Relógio</option>
+      <option>camisa vasco</option>
+      <option>dicionário de inglês</option>
+      <option>guarda chuva</option>
+    </select>
+
+    <div class="acoes">
+      <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
+      <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
+    </div>
+  </div>
 </div>
 </body>
 </html>
