--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -99,7 +99,9 @@
      <div class="perfil-container">
 
       <div class="perfil-esquerda">
-        <div class="fotoperfil"></div>
+        <div class="fotoperfil">
+
+        </div>
 
         <div class="info">
           <h2>Nome</h2>
