--- a/caneta.html
+++ b/caneta.html
@@ -108,7 +108,9 @@
             <h2 class="produto-titulo">Caneta</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/mulher-negra-carol-figueiredo-cabelo-natural-20231127160756.webp" class="">
+              </div>
                 <span class="produto-usuario-nome">Karol</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
@@ -164,6 +166,30 @@
 
     </div>
 
+
+
 </div>
+
+
+    
+<div id="overlayTroca" class="overlay">
+  <div class="modal-troca">
+    <h2>Escolha um item para trocar</h2>
+
+    <select class="input-info" required>
+      <option value="" disabled selected>Categoria</option>
+      <option>Relógio</option>
+      <option>camisa vasco</option>
+      <option>dicionário de inglês</option>
+      <option>guarda chuva</option>
+    </select>
+
+    <div class="acoes">
+      <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
+      <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
