--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -94,12 +94,17 @@
 
   <div class="all">
 
-    <div class="logoperfil"></div>
+    <div class="logoperfil">
+     
+    </div>
 
      <div class="perfil-container">
 
       <div class="perfil-esquerda">
-        <div class="fotoperfil"></div>
+        
+        <div class="fotoperfil">
+           <img src="Img/nova_garrafa.avif" alt="">
+        </div>
 
         <div class="info">
           <h2>Nome</h2>
@@ -127,23 +132,23 @@
 
         <div class="grid">
             <div class="card">
-                <img src="Img/IMAGEM11.webp">
-                <p>Estojo</p>
+                <img src="Img/img_fone_p.jpg">
+                <p>Fone sem fio</p>
             </div>
 
             <div class="card">
-                <img src="Img/IMAGEM3.jpg">
-                <p>Fone</p>
+                <img src="Img/img_garrafa_p.webp">
+                <p>Garrafa térmica</p>
             </div>
 
             <div class="card">
                 <img src="Img/IMAGEM77.jpg">
-                <p>Lápis</p>
+                <p>Dicionário</p>
             </div>
 
             <div class="card">
-                <img src="Img/IMAGEM30.jpg">
-                <p>Relógio</p>
+                <img src="Img/IMAGEM1.jpg">
+                <p>Capa de iphone 11</p>
             </div>
 
         </div>
@@ -156,23 +161,23 @@
 
          <div class="grid">
             <div class="card">
-                <img src="Img/IMAGEM11.webp">
-                <p>Estojo</p>
+                <img src="Img/IMAGEM2.webp">
+                <p>Raquete esportiva</p>
             </div>
 
             <div class="card">
                 <img src="Img/IMAGEM3.jpg">
-                <p>Fone</p>
+                <p>Camisa feminina do vasco</p>
             </div>
 
             <div class="card">
-                <img src="Img/IMAGEM77.jpg">
-                <p>Lápis</p>
+                <img src="Img/IMAGEM9.jpg">
+                <p>Livro de quadrinhos</p>
             </div>
 
             <div class="card">
-                <img src="Img/IMAGEM30.jpg">
-                <p>Relógio</p>
+                <img src="Img/relogio_digital.jpg">
+                <p>Relógio digital</p>
             </div>
 
         </div>
