--- a/capinha.html
+++ b/capinha.html
@@ -106,7 +106,9 @@
             <h2 class="produto-titulo">Capa de iphone 11 pro max</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/retrato-de-um-adolescente-sorridente-com-fones-de-ouvido_171337-40116.jpg" class="">
+              </div>
                 <span class="produto-usuario-nome">Jhon</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
