--- a/estojo.html
+++ b/estojo.html
@@ -107,7 +107,9 @@
             <h2 class="produto-titulo">Estojo Escola</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/retrato-de-adolescente-feliz-por-voltar-a-universidade_23-2148586575.avif" class="">
+              </div>
                 <span class="produto-usuario-nome">jaqueline</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
