--- a/garrafa.html
+++ b/garrafa.html
@@ -107,7 +107,9 @@
             <h2 class="produto-titulo"> Garrafa térmica</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/FOTO.webp" class="">
+              </div>
                 <span class="produto-usuario-nome">Everton</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
