--- a/lancheira.html
+++ b/lancheira.html
@@ -107,7 +107,9 @@
             <h2 class="produto-titulo">Lancheira</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/perfil-1437912825-612x612.jpg" class="">
+              </div>
                 <span class="produto-usuario-nome">Jonh</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
