--- a/raquete.html
+++ b/raquete.html
@@ -107,7 +107,9 @@
             <h2 class="produto-titulo">Raquete de tênis Profissional</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/aluno-foto.jpg" class="">
+              </div>
                 <span class="produto-usuario-nome">Luiz</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
