--- a/livro.html
+++ b/livro.html
@@ -107,7 +107,9 @@
             <h2 class="produto-titulo">Livro</h2>
 
             <div class="produto-usuario-area">
-                <div class="produto-usuario-foto"></div>
+                <div class="produto-usuario-foto">
+              <img src="Img/estudante-fotos.jpg" class="">
+              </div>
                 <span class="produto-usuario-nome">Vinicius</span>
                 <button class="produto-botao-seguir">seguir</button>
             </div>
