--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -95,31 +95,27 @@
   <div class="all">
 
     <div class="logoperfil">
+<img src="Img/photo-1473116763249-2faaef81ccda.avif" alt="">
      
     </div>
 
      <div class="perfil-container">
 
       <div class="perfil-esquerda">
-<<<<<<< HEAD
         
         <div class="fotoperfil">
-           <img src="Img/nova_garrafa.avif" alt="">
-=======
-        <div class="fotoperfil">
-
->>>>>>> 3d5397f077998b9acac1329c32797b034bc1ab95
+           <img src="Img/young-8700871_1280.jpg" class="">
         </div>
 
         <div class="info">
-          <h2>Nome</h2>
+          <h2>Jailson silva pinto</h2>
           <i class="ri-money-dollar-circle-line"></i><a>00,0</a>
 
         </div>
       </div>
       <div class="perfil-direita">
         <div class="seguidores">
-          0 seguidores &nbsp;&nbsp; 0 seguindo
+          10 seguidores &nbsp;&nbsp; 20 seguindo
         </div>
         <button class="editar">
           <a>Editar</a>
