--- a/Tela_login.html
+++ b/Tela_login.html
@@ -12,49 +12,47 @@
 <body>
 
   <div class="Login-page">
-
     
     <div class="Card">
       <img src="Img/logo 2.png" alt="logo"  class="logo">
     <div>
+        <form class="form" id="form">
 
-    <form class="form" id="form">
+          <div class="campo">
+            <label for="usuario">Nome</label>
+            <input type="text" id="usuario" placeholder="Digite seu usuário">
+            <small></small>
+          </div>
 
-      <div class="campo">
-        <label for="usuario">Nome</label>
-        <input type="text" id="usuario" placeholder="Digite seu usuário">
+          <div class="campo">
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" placeholder="Digite sua senha">
+            <i id="versenha" class="ri-eye-line"></i>
+            <small></small>
+          </div>
+
+          <a class="botao" type="submit" href="index.html">ENTRAR</a>
+        </form>
       </div>
+      <br>
 
-      <div class="campo">
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" placeholder="Digite sua senha">
-        <i id="versenha" class="ri-eye-line"></i>
-        <small>Error Message</small>
-      </div>
+      <button class="google-btn">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
+        Entrar com Google 
+      </button>
 
-      <button class="botao" type="submit">ENTRAR</button>
+      <p class="cadastro">
+        Não tem uma conta?
+        <a href="Tela_criar_senha.html">Cadastre-se</a>
+      </p>
 
-    </form>
+
+    </div>
+
   </div>
-<br>
 
-<button class="google-btn">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google">
-  Entrar com Google 
-</button>
-
-<p class="cadastro">
-  Não tem uma conta?
-  <a href="Tela_criar_senha.html">Cadastre-se</a>
-</p>
-
-
-</div>
-
-</div>
-
-</div>
-<script src="script.js"></script>
+  </div>
+  <script src="script.js"></script>
 </body>
 
 
