--- a/tela_filtro.html
+++ b/tela_filtro.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
-    <title>Document</title>
+    <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+     <title>Document</title>
 </head>
 <body>
     <div class="faixatopo">
