--- a/estojo.html
+++ b/estojo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Estojo-Desapega SENAI</title>
     <link rel="stylesheet" href="estilo.css">
      <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+     <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
 </head>
 <body>
      <div class="faixatopo">
