--- a/tela_filtro.html
+++ b/tela_filtro.html
@@ -7,7 +7,7 @@
      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
     <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
-     <title>Document</title>
+     <title>Filtro-Desapega SENAI</title>
 </head>
 <body>
     <div class="faixatopo">
