--- a/Tela inscrição.html
+++ b/Tela inscrição.html
@@ -6,6 +6,7 @@
     <title>Inscrição-Desapega SENAI</title>
 
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
 </head>
 <body>  
 <div class="Login-page">
