--- a/Tela_login.html
+++ b/Tela_login.html
@@ -7,6 +7,7 @@
     <title>Login-Desapega SENAI</title>
     <link rel="stylesheet" href="estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+    <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
 </head>
 
 <body>
