--- a/Tela_perfil.html
+++ b/Tela_perfil.html
@@ -7,6 +7,7 @@
       <title>Perfil-Desapega SENAI</title>
       <link rel="stylesheet" type="text/css" href="estilo.css">
       <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
   </head>
   <body>
     <div class="faixatopo">
