--- a/tela_eletronico.html
+++ b/tela_eletronico.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Eletronico-Desapega SENAI</title>
 </head>
 <body>
     <div class="faixatopo">
