--- a/tela_produto.html
+++ b/tela_produto.html
@@ -5,6 +5,7 @@
     <title>Produto-Desapega SENAI</title>
     <link rel="stylesheet" href="estilo.css">
      <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
+     <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
 </head>
 <body>
       <div class="faixatopo">
