--- a/garrafa.html
+++ b/garrafa.html
@@ -116,7 +116,7 @@
 
             <div class="produto-divisor"></div>
 
-            <button class="produto-botao-principal">Eu quero</button>
+             <button id="btnQuero" class="produto-botao-principal">Eu quero</button>
 
             <button class="produto-botao-chat">
                 Chat <i class="ri-chat-3-line"></i>
@@ -165,5 +165,25 @@
     </div>
 
 </div>
+<div id="overlayTroca" class="overlay">
+  <div class="modal-troca">
+    <h2>Escolha um item para trocar</h2>
+
+    <select class="input-info" required>
+      <option value="" disabled selected>Categoria</option>
+      <option>Relógio</option>
+      <option>camisa vasco</option>
+      <option>dicionário de inglês</option>
+      <option>guarda chuva</option>
+    </select>
+
+    <div class="acoes">
+      <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
+      <button id="btnSelecionar" class="btn">Pontos</button>
+      <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
+    </div>
+  </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
