--- a/caneta.html
+++ b/caneta.html
@@ -117,7 +117,7 @@
 
             <div class="produto-divisor"></div>
 
-            <button class="produto-botao-principal">Eu quero</button>
+            <button id="btnQuero" class="produto-botao-principal">Eu quero</button>
 
             <button class="produto-botao-chat">
                 Chat <i class="ri-chat-3-line"></i>
@@ -186,10 +186,11 @@
 
     <div class="acoes">
       <button id="cancelarTroca" class="btn-cancelar">Cancelar</button>
+      <button id="btnSelecionar" class="btn">Pontos</button>
       <button id="enviarTroca" class="btn-enviar">Enviar proposta</button>
     </div>
   </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
