--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
           </div>
 
           <div class="popup-body">
-            <div class="notificacao-item ">
-              João curtiu seu produto
+            <a href="capinha.html" class="popup-link">
+              John publicou um novo produto
               <span class="tempo">2 min atrás</span>
-            </div>
+            </a>
 
             <div class="notificacao-item">
               Nova mensagem recebida
               <span class="tempo">10 min atrás</span>
-            </div>
+            </div>  
 
             <div class="notificacao-item">
               Seu produto foi visualizado
