--- a/tela_livraria.html
+++ b/tela_livraria.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
      <link rel="icon" href="Img/possivel logo.png" type="image/x-icon">
     <title>Document</title>
 </head>
@@ -33,7 +34,7 @@
 
         <div class="menu2 notificacao-wrapper">
             <a href="#" id="btnNotificacao">
-            Notificações <i class="ri-notification-line"></i>
+             Notificações <i class="ri-notification-line"></i>
             </a>
 
             <div class="popup-notificacao" id="popupNotificacao">
@@ -41,21 +42,22 @@
                 <h4>Notificações</h4>
             </div>
 
-            <div class="popup-body">
+            <a href="capinha.html" class="popup-body">
                 <div class="notificacao-item ">
-                João curtiu seu produto
+                John publicou um novo produto
                 <span class="tempo">2 min atrás</span>
-                </div>
+            </a>
 
-                <div class="notificacao-item">
+            <div class="notificacao-item">
                 Nova mensagem recebida
                 <span class="tempo">10 min atrás</span>
-                </div>
+            </div>
 
-                <div class="notificacao-item">
-                Seu produto foi visualizado
-                <span class="tempo">1 hora atrás</span>
-                </div>
+            <a href="raquete.html" class="popup-body">
+                <div class="notificacao-item ">
+                Luiz publicou um novo produto
+                <span class="tempo">2 min atrás</span>
+            </a>
             </div>
             </div>
         </div>
